  the name in monsters.txt prevails. (Lets us distinguish between monsters
  that the server gives the same name to, but are different)
- WX Advance Settings now support proxy for download manual.
  You have to add lines 'webproxy' and 'webproxy_port' in config.txt to enable proxy.
- storageAuto will now check if you have the ability to open storage.

tablepack/monsters.txt
- Kobolds have been renamed from Kobold # to Kobold-#.
  Many people don't know about using tabs in mon_control.txt, and
  would probably have problems figuring out what to do for Kobolds.
  Example: Kobold 1 is now Kobold-1

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm
- New selfCondition _whenPermitSkill _whenNotPermitSkill for use in auto-skill
  usage blocks; they are true/false respectively when you have been granted
  use of that temporary skill.
- New condition _smartEncore for useSelfSkill. When 1, it will cast the
  Encore skill instead of this skill if Encore would cause this skill to
  be cast (saves SP for bards and dancers).
- avoidGM_near now supports different modes:
  0 - disabled (do not avoid GM)
  1 - teleport & disconnect
  2 - disconnect
  3 - teleport
  4 - respawn
- New 'previousDamage (range)' condition for attackSkillSlot.
  Use this skill only when your damage to the monster is between the
  specified range.
- teleportAuto_maxDmgInLock (number)
  Similar to teleportAuto_maxDmg, but only has effect when in lockMap.
- teleportAuto_minAggressivesInLock (number)
  Similar to teleportAuto_minAggressives, but only has effect when in lockMap.
- portalRecord: